--- a/WORKDIR/dockerfile
+++ b/WORKDIR/dockerfile
@@ -1,5 +1,13 @@
+# FROM almalinux:9
+# RUN mkdir /app
+# WORKDIR /app
+# RUN pwd
+# CMD ["sleep","500"]
+
+
 FROM almalinux:9
 RUN mkdir /app
-WORKDIR /app
+WORKDIR /app 
+#setup the pwd
 RUN pwd
-CMD ["sleep","500"]
+CMD ["sleep","100"]
