--- a/ARG/dockerfile
+++ b/ARG/dockerfile
@@ -3,6 +3,6 @@ FROM almalinux:${version:-9}
 ARG Name=Saikchintha
 ARG Designation= DevOPS
 
-RUN echo "my name is ${Name}""
+RUN echo "my name is ${Name}"
 
 CMD ["sleep","100"]
