--- a/ARG/dockerfile
+++ b/ARG/dockerfile
@@ -2,7 +2,7 @@ ARG version
 FROM almalinux:${version:-9}
 ARG Name=Saikchintha
 ARG Designation= DevOPS
-
-RUN echo "my name is ${Name}"
+ENV Salary = 100hrs
+RUN echo "my name is ${Name}, Salary is ${Salary}""
 
 CMD ["sleep","100"]
