--- a/ARG/dockerfile
+++ b/ARG/dockerfile
@@ -3,6 +3,6 @@ FROM almalinux:${version:-9}
 ARG Name=Saikchintha
 ARG Designation= DevOPS
 ENV Salary = 100hrs
-RUN echo "my name is ${Name}, Salary is ${Salary}""
+RUN echo "my name is ${Name}, Salary is ${Salary}"
 
 CMD ["sleep","100"]
